unpackaged/main/default/objects/Activity/fields/Email_To__c.field-meta.xml
<CustomField>
    <fullName>Email_To__c</fullName>
    <label>Email To</label>
    <type>Email</type>
</CustomField>