unpackaged/main/default/objects/Activity/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Detail__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Sales SupportCustom Request</fullName>
            </value>
            <value>
                <fullName>Business Case/ROI</fullName>
            </value>
            <value>
                <fullName>RAFI/RFP/SecQ</fullName>
            </value>
            <value>
                <fullName>Sizing</fullName>
            </value>
            <value>
                <fullName>Skinned Demo preparation</fullName>
            </value>
            <value>
                <fullName>Custom Demo preparation</fullName>
            </value>
            <value>
                <fullName>PoV Preparation</fullName>
            </value>
            <value>
                <fullName>PoV Delivery</fullName>
            </value>
            <value>
                <fullName>Solution Definition</fullName>
            </value>
            <value>
                <fullName>Opportunity Review</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Business Review</fullName>
            </value>
            <value>
                <fullName>Account Transition</fullName>
            </value>
            <value>
                <fullName>Client-Supplied Contract</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>Custom Pricing</fullName>
            </value>
            <value>
                <fullName>Additional Discount</fullName>
            </value>
            <value>
                <fullName>Review Scoping Details</fullName>
            </value>
            <value>
                <fullName>Create Quote</fullName>
            </value>
            <value>
                <fullName>Proposal Support</fullName>
            </value>
            <value>
                <fullName>Opportunity Support</fullName>
            </value>
            <value>
                <fullName>Duplicate Merge Request</fullName>
            </value>
            <value>
                <fullName>Account Reassignment</fullName>
            </value>
            <value>
                <fullName>Territory Update</fullName>
            </value>
            <value>
                <fullName>Pricing Estimation</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
            <value>
                <fullName>Implementation Escalation</fullName>
            </value>
            <value>
                <fullName>NDA Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>